--- a/onehooklibrarykotlin/src/main/res/values/attrs.xml
+++ b/onehooklibrarykotlin/src/main/res/values/attrs.xml
@@ -7,6 +7,7 @@
         <attr name="android:layout_marginEnd" format="dimension" />
         <attr name="android:layout_marginTop" format="dimension" />
         <attr name="android:layout_marginBottom" format="dimension" />
+        <attr name="android:layout_weight" format="float"/>
         <attr name="android:layout_gravity" format="flags">
             <flag name="top" value="0x30" />
             <flag name="bottom" value="0x50" />
